<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EEF1"
    android:paddingBottom="30dp"
    tools:context=".PantallaPrincipal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardClaro"
        app:cardCornerRadius="20dp"
        app:contentPaddingBottom="7.5dp"
        app:contentPaddingLeft="30dp"
        app:contentPaddingRight="30dp"
        app:contentPaddingTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/rosa"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/nombreInput"
                    android:text="@string/nombreLabel"
                    android:textColor="@color/gris"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nombreInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="9sp"
                    android:layout_weight="1"
                    android:background="@drawable/input"
                    android:drawableStart="@drawable/icono_nombre_personalizado"
                    andr oid:drawablePadding="9sp"
                    android:inputType="text"
                    android:paddingStart="12sp"
                    android:paddingEnd="12sp"
                    android:textColor="@drawable/input_color_texto_personalizado"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/edadInput"
                    android:text="@string/edadLabel"
                    android:textColor="@color/gris"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edadInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="9sp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/input"
                    android:drawableStart="@drawable/icono_edad_personalizado"
                    android:drawablePadding="9sp"
                    android:inputType="number"
                    android:paddingStart="12sp"
                    android:paddingEnd="12sp"
                    android:textColor="@drawable/input_color_texto_personalizado"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDomicilio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/domicilioInput"
                    android:text="@string/domicilioLabel"
                    android:textColor="@color/gris"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/domicilioInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="9sp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/input"
                    android:drawableStart="@drawable/icono_ubicacion_personalizado"
                    android:drawablePadding="9sp"
                    android:inputType="text"
                    android:paddingStart="12sp"
                    android:paddingEnd="12sp"
                    android:textColor="@drawable/input_color_texto_personalizado"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/generoInput"
                    android:text="@string/generoLabel"
                    android:textColor="@color/gris"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/generoInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/input"
                    android:drawableStart="@drawable/icono_genero_personalizado"
                    android:drawablePadding="9sp"
                    android:inputType="text"
                    android:paddingStart="12sp"
                    android:paddingEnd="12sp"
                    android:textColor="@drawable/input_color_texto_personalizado"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:backgroundTint="@color/rosa"
                android:insetLeft="6dp"
                android:insetTop="6dp"
                android:insetRight="6dp"
                android:insetBottom="6dp"
                android:text="@string/btnAgregar"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                app:cornerRadius="15dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/btnMostrar"
        android:textColor="@color/rosa"
        android:textSize="13sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>