<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoClaro"
    tools:context=".MostrarPersonas">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardClaro"
        app:cardCornerRadius="20dp"
        app:contentPaddingBottom="7.5sp"
        app:contentPaddingLeft="0sp"
        app:contentPaddingRight="0sp"
        app:contentPaddingTop="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/rosa"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/tablaPersonas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:orientation="vertical">

                <TableRow
                    android:id="@+id/tableRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_vertical"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombreLabel"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/edadLabel"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/domicilioLabel"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/generoLabel"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="X"
                        android:textAlignment="center"
                        android:textColor="@color/cardClaro"
                        android:textStyle="bold" />

                </TableRow>

<!--                <TableRow-->
<!--                    android:id="@+id/fila"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:gravity="center"-->
<!--                    android:paddingTop="5sp"-->
<!--                    android:paddingBottom="5sp">-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView8"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_weight="1"-->
<!--                        android:gravity="center"-->
<!--                        android:text="Ángel"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textSize="14sp" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView9"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_weight="1"-->
<!--                        android:gravity="center"-->
<!--                        android:text="18"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textSize="13sp"-->
<!--                        android:textStyle="normal" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView10"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_weight="1"-->
<!--                        android:gravity="center"-->
<!--                        android:text="Jilgueros 17239"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textSize="13sp"-->
<!--                        android:textStyle="normal" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView11"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_weight="1"-->
<!--                        android:gravity="center"-->
<!--                        android:text="Hombre"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textSize="13sp"-->
<!--                        android:textStyle="normal" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView13"-->
<!--                        android:layout_width="40dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="X"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textColor="@android:color/holo_red_dark"-->
<!--                        android:textStyle="bold" />-->

<!--                </TableRow>-->

            </LinearLayout>

            <Button
                android:id="@+id/btnVaciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="6dp"
                android:insetTop="6dp"
                android:insetRight="6dp"
                android:insetBottom="6dp"
                android:text="@string/btnLimpiar"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                app:cornerRadius="15dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="terminarActividad"
        android:text="@string/btnSalir"
        android:textColor="@color/rosa"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>